// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataListLoading renders correctly 1`] = `
<div aria-hidden="true" class="vd-data-list-loading" label="Test">
  <!---->
  <ul class="pl-0">
    <li class="vd-data-list-loading-item">
      <headerloading-stub width="60px" height="1rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90px" height="1.5rem"></headerloading-stub>
    </li>
  </ul>
</div>
`;

exports[`DataListLoading renders correctly in row mode 1`] = `
<div aria-hidden="true" class="vd-data-list-loading">
  <!---->
  <ul class="pl-0">
    <li class="vd-data-list-loading-item mb-4">
      <!---->
      <headerloading-stub width="150px" height="1.5rem"></headerloading-stub>
    </li>
    <li class="vd-data-list-loading-item mb-4">
      <!---->
      <headerloading-stub width="150px" height="1.5rem"></headerloading-stub>
    </li>
    <li class="vd-data-list-loading-item">
      <!---->
      <headerloading-stub width="150px" height="1.5rem"></headerloading-stub>
    </li>
  </ul>
</div>
`;

exports[`DataListLoading renders correctly with a header 1`] = `
<div aria-hidden="true" class="vd-data-list-loading">
  <headerloading-stub width="100px" height="1.5rem" class="mb-4"></headerloading-stub>
  <ul class="pl-0">
    <li class="vd-data-list-loading-item">
      <headerloading-stub width="60px" height="1rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90px" height="1.5rem"></headerloading-stub>
    </li>
  </ul>
</div>
`;

exports[`DataListLoading renders correctly with more items 1`] = `
<div aria-hidden="true" class="vd-data-list-loading">
  <!---->
  <ul class="pl-0">
    <li class="vd-data-list-loading-item mb-4">
      <headerloading-stub width="60px" height="1rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90px" height="1.5rem"></headerloading-stub>
    </li>
    <li class="vd-data-list-loading-item mb-4">
      <headerloading-stub width="60px" height="1rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90px" height="1.5rem"></headerloading-stub>
    </li>
    <li class="vd-data-list-loading-item">
      <headerloading-stub width="60px" height="1rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90px" height="1.5rem"></headerloading-stub>
    </li>
  </ul>
</div>
`;
